--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1032,6 +1032,8 @@ input, select, textarea {
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
+		margin-bottom: 1.5rem;
+		margin-right: 0.5rem;
 	}
 
 		input[type="submit"]:hover,
